# nowa_photos

./: README.md  pyproject.toml
config/: config.yaml
docs/: InitialSpecs.md  sanity_checks.md  updateToFixDatabaseStructure.md
nowa_photos/: config.py  database.py  db_manager.py  deep_sanity_check.py  deep_sanity_check2.py  deep_sanity_check_mp.py  deep_sanity_check_mp2.py  hasher.py  ingest.py  merge_db.py  metadata.py  migrate_db.py  sanity_check.py  tagger.py
tests/: test_config.py  test_database.py  test_db_manager.py  test_hasher.py  test_ingest.py  test_tagger.py
